test/semantic_error/duplicate_func_arg2.c
/*
Semantic error: Identifier 'a' has already been declared in the same scope at line 6 column 9
*/

void f(int a){
    char a;
}

int main(){
    return 0;
}